--- a/src/app/user-detail/user-detail.component.scss
+++ b/src/app/user-detail/user-detail.component.scss
@@ -1,12 +1,17 @@
 .user-detail-header {
-  height: 104px;
-  width: 60vw;
+  height: 80vh;
+  width: 55vw;
   background-color: rgb(255, 255, 255);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  margin: 0 auto;
   
 
   mat-card-content {
     display: flex;
-    align-items: flex-end;
+    align-items: center;
     height: 100vh;
 
     img {
